# adshare

./: .env.example  .gitignore  AmazingData-1.1.8-cp311-none-any.whl  Dockerfile  Dockerfile.worker  README.md  docker-compose.override.yml  docker-compose.worker-after-hours.yml  docker-compose.worker-day.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  tushare.py
adshare/: .env.example  Dockerfile  README.adshare-stub.md  __init__.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml
adshare/adapters/: amazingdata.py
adshare/clients/: __init__.py  tushare_client.py
adshare/core/: __init__.py  auth.py  cache.py  config.py  exceptions.py  logging.py  metrics.py  ratelimit.py  realtime_keys.py
adshare/engines/factor/: __init__.py  analysis.py
adshare/engines/fundamental/: __init__.py  factors.py
adshare/engines/technical/: __init__.py  indicators.py
adshare/historical/: __init__.py  admin.py  maintenance.py  models.py  sync.py  warehouse.py
adshare/mcp/: __init__.py  server.py
adshare/models/: __init__.py  schemas.py  stock_schemas.py
adshare/routers/: __init__.py  factor.py  financial.py  fundamental.py  health.py  historical.py  market.py  realtime.py  stock_data.py  technical.py  tushare_compat.py
adshare/routers/tushare/: __init__.py  common.py  index.py  realtime.py  stock.py
adshare/services/: __init__.py  dataframe_formatter.py  derived_metrics.py  factor_analysis.py  fundamental_analysis.py  limit_up.py  mappers.py  market_data.py  realtime.py  realtime_broadcast.py  realtime_publisher.py  realtime_tushare_mapper.py  technical_analysis.py
adshare_base/: Dockerfile
amazingdata/: .env.example  README.md  __init__.py  base.Dockerfile  batch.Dockerfile  batch.env.example  batch.py  config.py  docker-compose.batch.yml  docker-compose.realtime.yml  pyproject.toml  realtime.Dockerfile  realtime.env.example  realtime.py
amazingdata-worker/: Dockerfile  docker-compose.yml
amazingdata/adapters/: amazingdata.py  base.py
amazingdata_worker/: Dockerfile  docker-compose.yml  main.py  realtime_publisher.py  requirements.txt  sync.py
amazingdata_worker/adapters/: amazingdata.py  base.py
config/: settings.yaml
docs/: AmazingData开发手册.md  CHANGELOG.md  adshare-stock-api-plan.md  architecture-review.md  deployment-guide.md  development-plan.md  historical-data-architecture.md  project-features.md  project-spec.md  realtime-tushare-extension.md  refactor-backlog.md  tushare-migration.md
docs/design/: phase4-architecture.md  realtime-push.md
scripts/: adshare-api.service  amazingdata_worker.py  backfill_financial.py  backfill_kline.py  cron_sync_kline_daily.py  cron_verify_max_date.py  deploy.sh  healthcheck.py  migrate_to_flat_layout.py  ref_sync_runner.py  repair_kline_quality.py  run_sync_kline_daily.sh  run_verify_max_date.sh  simulate_backfill_5y.py  sync_reference_data.py  sync_to_remote.sh  verify_kline_dates.py  verify_kline_quality.py
skills/adshare-api/: SKILL.md
skills/adshare-factor/: SKILL.md
skills/adshare-fundamental/: SKILL.md
skills/adshare-technical/: SKILL.md
tests/: conftest.py  healthcheck_timeout_test.py  test_amazingdata_adapter.py  test_api.py  test_auth.py  test_cache.py  test_error_boundaries.py  test_factor.py  test_factor_router.py  test_fundamental.py  test_historical.py  test_historical_integration.py  test_limit_down_service.py  test_limit_up_service.py  test_market.py  test_market_data_service.py  test_pydantic_boundaries.py  test_realtime_push.py  test_response_mappers.py  test_stock_data.py  test_stock_data_e2e.py  test_stock_data_errors.py  test_technical.py  test_technical_analysis_service.py  test_technical_e2e.py  test_tushare.py  test_tushare_client.py  test_tushare_integration.py
tests/routers/tushare/: test_realtime.py
tests/services/: test_realtime_tushare_mapper.py
