[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adshare"
version = "0.1.0"
description = "AmazingData share service - A financial data middleware for China A-share markets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "adshare", email = "adshare@example.com"},
]
keywords = ["finance", "a-share", "amazingdata", "quant", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyarrow>=18.0.0",
    "python-multipart>=0.0.17",
    "prometheus-client>=0.21.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
adshare = "adshare.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["adshare"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
