# Hatch workspace: each member package has its own pyproject.toml.
#   adshare/         — FastAPI HTTP API + MCP server (any platform)
#   amazingdata/     — AmazingData SDK worker (linux/amd64 only)
#
# This root pyproject.toml exists for:
#   - hatch workspace membership declaration
#   - dev tooling (pytest, ruff, mypy) shared across the workspace
#   - shared `[project.optional-dependencies.dev]`
#
# `pip install -e .` at the workspace root installs ALL member packages
# plus the shared dev extras in one go. To install a single member, cd
# into it: `pip install -e ./adshare`.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.workspace]
members = ["adshare", "amazingdata"]

[project]
name = "adshare-workspace"
version = "0.1.0"
description = "adshare monorepo — HTTP API + AmazingData SDK subsystem"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "adshare", email = "adshare@example.com"},
]
# Runtime deps live in each member's pyproject.toml.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running adshare-api instance",
]
