[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adshare"
version = "0.1.0"
description = "AmazingData share service - FastAPI middleware that exposes the L3 historical warehouse + Redis real-time state as HTTP REST API and MCP."
readme = "README.adshare-stub.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "adshare", email = "adshare@example.com"},
]
keywords = ["finance", "a-share", "quant", "api", "fastapi", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "prometheus-client>=0.21.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    # Config + cache + state
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    # Data layer
    "pandas==2.0.3",
    "numpy==1.26.4",
    "pyarrow==15.0.0",
    "scipy==1.12.0",
    "tables>=3.9.0",
    "duckdb>=1.0.0",
    "apscheduler>=3.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
